--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
   <title>videos</title>
 </head>
   <body>
-    <h1> Link de Video</h1>h1>
-    <div>
+    <h1> Link de Video</h1>
+      <h2>video 01</h2>
+      <div style="margin 210px";>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/9cIWcoQONfk?si=6p6R0apIoK92WmD2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpol/icy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
-    <div>
+    <div style="margin 210px";>
+      <h2>video 02</h2>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/91_H0BsyhBA?si=mJwW7A3QoL_r4h7s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
-    <div>
+    <div style="margin 210px";>
+      <h2>video 03</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/rnTtclOUhGA?si=G36YEfTsXjJqDSfU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
   </body>
